samples/_failures_safe/1761564094_0c57bd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_af47c6d7.c: In function ‘main’:
./samples/SAFE/__tmp_af47c6d7.c:155:9: error: expected expression at end of input
  155 |         if (choice ==
      |         ^~
./samples/SAFE/__tmp_af47c6d7.c:155:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_af47c6d7.c:155:9: error: expected declaration or statement at end of input
